<resources>
    <string name="app_name">Actividad_Views</string>
    <string name="fondo1">Fondo Rojo</string>
    <string name="fondo2">Fondo Gris</string>
    <string name="letras1">LETRAS NEGRAS</string>
    <string name="letras2">LETRAS ROJAS</string>
    <string name="txtOculto">Este es el mensaje Oculto</string>
    <string name="txtClicL">Haz aquí un clic largo</string>
    <string name="txtRating">[0/5]</string>
</resources>
