<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d2d2d2"
    android:padding="10dp"
    tools:context="com.tologo.actividad_views.MainActivity">


    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="23dp"
        android:gravity="center"
        android:textOff="@string/fondo1"
        />

    <ToggleButton
        android:id="@+id/toggleButton2"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/toggleButton1"
        android:layout_below="@+id/toggleButton1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textOff="@string/letras1" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/toggleButton2"
        android:layout_marginTop="40dp"
        android:text="Mostrar" />

    <TextView
        android:id="@+id/textOculto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/checkBox"
        android:layout_below="@id/toggleButton2"
        android:layout_alignBaseline="@id/checkBox"
        android:padding="10dp"
        android:text="@string/txtOculto"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txtClicLargo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/checkBox"
        android:layout_marginTop="50dp"
        android:text="@string/txtClicL"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/Layout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/txtClicLargo"
        android:background="#d2d2d2"
        android:orientation="vertical"
        android:padding="20dp">

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5" />

        <TextView
            android:id="@+id/textEstrellas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/txtRating"
            android:textSize="24sp" />
    </LinearLayout>
</RelativeLayout>
